--- a/index.html
+++ b/index.html
@@ -65,8 +65,12 @@
     <div class="container links" id="links">
         <h1 style="color: ivory;">Links to my Github, Linkedin, and a picture of my resume!</h1>
         <ul>
-            <li><a href="url" style="color: lightblue;">https://github.com/VeigarMain</a></li>
-            <li><a href="url" style="color: lightblue;">https://www.linkedin.com/in/jake-battaglia-b588021a9/</a></li>
+
+
+            <li><a href="https://github.com/VeigarMain" target="_blank" style="color: lightblue;">GitHub</a></li>
+            <li><a href="https://www.linkedin.com/in/jake-battaglia-b588021a9/" target="_blank" style="color: lightblue;">LinkedIn</a></li>
+            <li><a href="./Resume/JAKES RESUME.pdf" style="color: lightblue;">Resume</a></li>
+        
             <li><img src="./img/NEWRESUME FOR PORT.PNG"></li>
         </ul>
 
